add a short example. slide edits

--- a/slides.html
+++ b/slides.html
@@ -57,13 +57,15 @@ class: inverse, center, middle
 
 ## rmarkdown -&gt; knitr -&gt; markdown -&gt; pandoc -&gt; ...
 
+## A minimal example (minimal.Rmd)
+
 ---
 
 # Examples
 
  - These slides!
 
- - Smaller processing tasks 
+ - Smaller processing tasks (short-example.Rmd)
  
  - Larger more involved reports (e.g. tech reports / thesis / publications) containing charts, tables, references
  
